# extending-bazel-to-its-full-potential

./: README.md
example1/main/: BUILD
example2/main/: BUILD  hello-world.cc
example2/termcolor/: BUILD
example3/: MODULE.bazel
example3/src/: BUILD  main.cpp
example4/: MODULE.bazel
example4/src/main/java/com/example/messenger/: Messenger.java
example4/src/test/java/com/example/messenger/: BUILD  MessengerTest.java
example5/: MODULE.bazel
example5/src/test/java/com/example/messenger/: BUILD
example6/: MODULE.bazel
example6/macros/: junit5.bzl
example6/src/main/java/com/example/: BUILD  HelloWorld.java
example6/src/main/java/com/example/messenger/: BUILD
example6/src/test/java/com/example/messenger/: BUILD  MessengerTest.java
