bazel_dep(name = "rules_jvm_external", version = "6.7")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.apache.commons:commons-lang3:3.9",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ]
)

use_repo(maven, "maven")