JUNIT_JUPITER_VERSION = "5.13.0-M2"
JUNIT_PLATFORM_VERSION = "1.13.0-M2"

#bazel_dep(name = "rules_java", version = "8.11.0") # Check for latest version
bazel_dep(name = "rules_jvm_external", version = "6.7") # Check for latest version
bazel_dep(name = "contrib_rules_jvm", version = "0.28.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.apache.commons:commons-lang3:3.9",
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:%s" % JUNIT_JUPITER_VERSION,
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")